/availble-item endpoint added
